--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
       crossorigin="anonymous">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>iScial App</title>
+    <title>iSocial App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
